objects/ASI_CRM_SKU_Photo__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AttachmentName__c</fullName>
        <formula>ASI_CRM_Attachment__r.ASI_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attachment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment</label>
        <referenceTo>ASI_CRM_Product_Warehouse_Photo__c</referenceTo>
        <relationshipName>SKU_Photo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Comments__c</fullName>
        <formula>ASI_CRM_Attachment__r.ASI_CRM_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_URL__c</fullName>
        <formula>HYPERLINK(if(
CASE(LOWER( ASI_CRM_Attachment__r.ASI_File_Extension__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&apos; &amp; ASI_CRM_Attachment__r.ASI_FileID__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
), &apos;Link&apos;)</formula>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Photo_Category__c</fullName>
        <formula>TEXT(ASI_CRM_Attachment__r.ASI_CRM_Photo_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Photo_Version__c</fullName>
        <formula>ASI_CRM_Attachment__r.ASI_CRM_Photo_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Version</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Preview__c</fullName>
        <formula>ASI_CRM_Attachment__r.ASI_Preview__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipName>SKU_Photo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SKU Photo Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_Photo_Version__c</columns>
        <columns>ASI_CRM_Photo_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SKUA-{0000000}</displayFormat>
        <label>SKU attachment no.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKU Photo Mappings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_SKU_Photo</fullName>
        <active>true</active>
        <label>CN SKU Photo</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>